# incubator-teaclave-sgx-sdk

sgx_edl/edl/: sgx_tfs.edl
sgx_fs/: Cargo.toml  Readme.md
sgx_fs/samples/file/enclave/: Cargo.toml  Enclave.config.xml  Makefile
sgx_fs/samples/file/enclave/src/: lib.rs
sgx_fs/samples/filestream/: Makefile
sgx_fs/samples/filestream/app/: Cargo.toml
sgx_fs/samples/filestream/app/src/: main.rs
sgx_fs/samples/filestream/enclave/: Cargo.toml  Enclave.config.xml
sgx_fs/samples/filestream/enclave/src/: lib.rs
sgx_fs/samples/filestream_c/: Makefile
sgx_fs/samples/filestream_c/app/: app.c  app.h
sgx_fs/samples/filestream_c/enclave/: Cargo.toml  Enclave.edl  Xargo.toml  x86_64-unknown-linux-sgx.json
sgx_fs/samples/uspfs/: Cargo.toml
sgx_fs/samples/uspfs/src/: main.rs
sgx_fs/src/: error.rs  fs.rs  fs_inner.rs  lib.rs  stream.rs
sgx_fs/src/core/: cache.rs  consts.rs  crypto.rs  link.rs  macros.rs  meta.rs  mod.rs  nodes.rs
sgx_fs/src/core/file/: flush.rs  init.rs  mod.rs  node.rs  other.rs  read.rs  write.rs
sgx_fs/src/core/ups/: mod.rs  ocall.rs  ups.rs
sgx_fs/uspfs/: Cargo.toml
sgx_fs/uspfs/src/: lib.rs
sgx_no_tstd/: build.rs
sgx_unwind/: build.rs
sgx_urts/src/: sgxfs.rs
sgx_ustdc/: sgxfs.c
