[package]
name = "sgx_uspfs"
version = "1.1.2"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://dingelish.github.io/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2018"

[lib]
name = "sgx_uspfs"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
sgx_types = { path = "../../sgx_types" }
