[package]
name = "uspfs"
version = "1.1.2"
authors = ["The Teaclave Authors"]
edition = "2018"

[dependencies]
libc = { version = "0.2" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_fs = { git = "https://github.com/apache/teaclave-sgx-sdk.git", default-features = false, features = ["uspfs"] }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_fs = { path = "../../../sgx_fs" }
